fixes css bug where clicking a planet with a colony with lots of text wasn't wrapping upsetting the grid layout

--- a/pax-imperia-js/css/style.css
+++ b/pax-imperia-js/css/style.css
@@ -1,6 +1,6 @@
 html, body {
   margin: 0;
-  white-space: nowrap;
+  /* white-space: nowrap; */
   height: 100%;
   width: 100%;
 }
